src/test/deca/context/invalid/self/affectationNonValide3.deca
class A { }

{
    A a;
    int i=1;

    a=i;
}